- Adds window resize event to resize canvas

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    <div id="file-in"></div>
-    <canvas id="canvas" height="720" width="920"></canvas>
+    <div class="file-input-div" id="file-input-div"></div>
+    <canvas id="canvas"></canvas>
 </body>
 
 </html>
