--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html><head>
-    <link rel="stylesheet" href="/wedge/index-752023e502123921.css">
+    <link rel="stylesheet" href="/index-752023e502123921.css">
 
-<link rel="preload" href="/wedge/wedge-95c80056a850a7e5_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/wedge/wedge-95c80056a850a7e5.js"></head>
+<link rel="preload" href="/wedge-95c80056a850a7e5_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/wedge-95c80056a850a7e5.js"></head>
 
 <body>
     <div class="file-input-div" id="file-input-div"></div>
     <canvas id="canvas"></canvas>
 
 
-<script type="module">import init from '/wedge/wedge-95c80056a850a7e5.js';init('/wedge/wedge-95c80056a850a7e5_bg.wasm');</script></body></html>
+<script type="module">import init from '/wedge-95c80056a850a7e5.js';init('/wedge-95c80056a850a7e5_bg.wasm');</script></body></html>
